--- a/pic235app/src/pages/CustosFixos/index.css
+++ b/pic235app/src/pages/CustosFixos/index.css
@@ -117,3 +117,21 @@
     border-radius: 3px;
   }
   
+  .custos-table {
+    margin-top: 20px;
+    width: 100%;
+    border-collapse: collapse;
+  }
+  
+  .custos-table th,
+  .custos-table td {
+    border: 1px solid #ccc;
+    padding: 10px;
+  }
+  
+  .icon {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+  }
+  
