--- a/pic235app/src/pages/CadastroEmpresa/index.css
+++ b/pic235app/src/pages/CadastroEmpresa/index.css
@@ -1,5 +1,5 @@
 .mainbox {
-  margin: auto 15rem;
+  margin: auto 15rem auto 600px !important;
   display: flex;
   flex-direction: column;
   align-items: center;
