--- a/pic235app/src/style.css
+++ b/pic235app/src/style.css
@@ -4,8 +4,8 @@
     font-family: 'K2D', sans-serif;
 }
 
-.fit-content {
-    width: fit-content;
+.form-row {
+    flex-wrap: wrap;
 }
 
 .text-navy {
