Dashboard page fix and SideBar added to other pages

--- a/pic235app/src/style.css
+++ b/pic235app/src/style.css
@@ -12,6 +12,10 @@
     color: navy;
 }
 
+.mainbox {
+    margin-top: 10px !important;
+}
+
 .round {
     border-radius: 100px;
     border: 2px solid rgba(119, 133, 135, 0.37);
